Resolve the comment